--- a/风格转换.ipynb
+++ b/风格转换.ipynb
@@ -383,9 +383,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOAD_PATH = \"./style_attack\"\n",
-    "SAVE_PATH = \"./gray4\"\n",
-    "CONTENT_PATH = \"content/gray4.png\"\n",
+    "LOAD_PATH = \"./style\"\n",
+    "SAVE_PATH = \"./zero-watermark"\n",
+    "CONTENT_PATH = \"./content/l2.png\"\n",
     "if not os.path.exists(SAVE_PATH):\n",
     "    os.mkdir(SAVE_PATH)  #创建"
    ]
